--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   </head>
   <body class="is-preload">
     <div id="wrapper">
+      <!-- HEADER -->
       <header id="header">
         <div class="image">
-          <span class="image avatar"><img src="images/Headshot.jpg" alt=" " width="300" height="350" /></span>
+          <span class="image avatar"><img src="images/Headshot.jpg" alt="Justin Bopp Headshot" /></span>
         </div>
         <div class="content">
           <div class="inner">
@@ -23,22 +24,20 @@
           <ul>
             <li><a href="#intro">About Me</a></li>
             <li><a href="#work">Research</a></li>
-            <li><a href="#gallery">Gallery</a></li>
             <li><a href="images/CV.pdf">CV</a></li>
           </ul>
         </nav>
       </header>
 
+      <!-- MAIN -->
       <div id="main">
 
         <!-- ABOUT ME -->
         <article id="intro">
           <h2 class="major">About Me</h2>
-          <span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+          <span class="image main"><img src="images/pic01.jpg" alt="Justin Bopp at work" /></span>
           <p>I am a Ph.D. student in Astrophysics & Computational Mathematics, Science and Engineering at Michigan State University, where I investigate compact objects, stellar explosions, and the extreme physics governing the most energetic events in the universe. My work sits at the intersection of high‑energy astrophysics, numerical simulations, and observational signatures of transient phenomena.</p>
-        <br>
           <p>Before MSU, I completed my master’s degree at CUNY, working with Dr. Ore Gottlieb at the Center for Computational Astrophysics (Flatiron Institute). In that work, I analyzed 3D GRMHD simulations of collapsars—massive stars collapsing directly into black holes—with a focus on understanding how accretion‑disk dynamics generate outflows even in the absence of black hole spin.</p>
-        <br>
           <p>Alongside research, I care deeply about mentorship, accessibility, and representation in STEM. Through programs such as AstroCom NYC, MSU Stellar Mentorship, and my outreach work organizing astronomy events, I aim to help build a more inclusive astrophysics community. My long‑term goal is a career in academia combining research, teaching, and community building.</p>
         </article>
 
@@ -46,51 +45,22 @@
         <article id="work">
           <h2 class="major">Research</h2>
 
-          <span class="image main"><img src="images/3d_nospin2.png" alt="Non‑spinning collapsar visualization" /></span></center>
+          <span class="image main"><img src="images/3d_nospin2.png" alt="Non-spinning collapsar visualization" /></span>
           <center><b><font size="5">GRMHD Simulations of Non‑Spinning Black Hole Collapsars</font></b></center>
           <p>My thesis work investigates the dynamical behavior of collapsars using the 3D GRMHD code HAMR. I simulate massive stellar collapse across different initial black hole spins. A major finding: even a non‑spinning black hole can launch subrelativistic, disk‑powered outflows capable of breaking out of the progenitor star—offering new insight into the transition between ordinary CCSNe and GRB‑producing collapsars.</p>
 
-          <span class="image main"><img src="images/Potential_Host_Galaxies4.png" alt="Rubin LSST DP0.2 visualization" /></span></center>
+          <span class="image main"><img src="images/Potential_Host_Galaxies4.png" alt="Rubin LSST DP0.2 visualization" /></span>
           <center><b><font size="5">Rubin Observatory DP0.2 Delegate</font></b></center>
           <p>I adapted and implemented a Color‑Match Nearest Neighbor (CMNN) photometric redshift estimator for LSST Data Preview 0.2. This work matched transients to likely host galaxies and supported early LSST science development. Results were presented at AAS and APS meetings.</p>
 
-          <span class="image main"><img src="images/IaHist.png" alt="FOAMS abundance matching" /></span></center>
+          <span class="image main"><img src="images/IaHist.png" alt="FOAMS abundance matching" /></span>
           <center><b><font size="5">FOAMS: Chemical Evolution Modeling</font></b></center>
           <p>I contributed to the FOAMS project by assembling APOGEE abundance datasets and fitting them to nucleosynthesis models. The goal is to constrain the relative contribution of Type Ia and core‑collapse supernovae across the Milky Way. With a large dataset now prepared, the next phase will analyze which elements best reflect the underlying SN population ratios.</p>
         </article>
 
-        <!-- RESEARCH GALLERY -->
-        <article id="gallery">
-          <h2 class="major">Research Gallery</h2>
-          <p>A collection of simulation snapshots, visualizations, and movies from my work in GRMHD, stellar collapse, and transient astronomy. Add your files and captions, and the gallery will auto‑format them.</p>
-
-          <div class="gallery-container">
-
-            <!-- Placeholder example item 1 -->
-            <div class="gallery-item">
-              <img src="images/example1.png" alt="Simulation frame placeholder" />
-              <div class="gallery-item-title">Example image placeholder — replace with your file</div>
-            </div>
-
-            <!-- Placeholder example item 2 -->
-            <div class="gallery-item">
-              <video src="videos/example_movie.mp4" autoplay loop muted></video>
-              <div class="gallery-item-title">Example movie placeholder — replace with your video</div>
-            </div>
-
-            <!-- Placeholder example item 3 -->
-            <div class="gallery-item">
-              <img src="images/example2.png" alt="Simulation slice" />
-              <div class="gallery-item-title">Another placeholder slot</div>
-            </div>
-
-          </div>
-
-          <p>Send me the filenames and captions for your actual gallery items, and I’ll replace these placeholders.</p>
-        </article>
-
       </div>
 
+      <!-- FOOTER -->
       <footer id="footer">
         <p class="copyright">© 2025 Justin Bopp. Design adapted from HTML5 UP.</p>
       </footer>
