--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           GRMHD simulations, and scientific communication. A related publication can be
           found here:
           <a href="https://ui.adsabs.harvard.edu/abs/2025ApJ...982L..56B/abstract" target="_blank">
-            Bopp et al. (2025)
+            Bopp & Gottlieb et al. (2025)
           </a>.
         </p>
 
@@ -152,4 +152,5 @@
 
 </body>
 </html>
+
 
