--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!-- ABOUT ME -->
       <article id="intro">
         <h2 class="major">About Me</h2>
-        <span class="image main"><img src="images/pic01.jpg" alt="Justin Bopp at work" /></span>
+        <span class="image main"><img src="images/1f09ea1a-6135-4152-93c9-7d5f98d9c75e.JPG" alt="Justin Bopp at work" /></span>
         <p>I am a Ph.D. student in Astrophysics & Computational Mathematics, Science and Engineering at Michigan State University, where I investigate compact objects, stellar explosions, and the extreme physics governing the most energetic events in the universe. My work sits at the intersection of high‑energy astrophysics, numerical simulations, and observational signatures of transient phenomena.</p>
         <p>Before MSU, I completed my master’s degree at CUNY, working with Dr. Ore Gottlieb at the Center for Computational Astrophysics (Flatiron Institute). In that work, I analyzed 3D GRMHD simulations of collapsars—massive stars collapsing directly into black holes—with a focus on understanding how accretion‑disk dynamics generate outflows even in the absence of black hole spin.</p>
         <p>Alongside research, I care deeply about mentorship, accessibility, and representation in STEM. Through programs such as AstroCom NYC, MSU Stellar Mentorship, and my outreach work organizing astronomy events, I aim to help build a more inclusive astrophysics community. My long‑term goal is a career in academia combining research, teaching, and community building.</p>
@@ -152,5 +152,6 @@
 
 </body>
 </html>
+
 
 
